--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
                                             </div>
                                             <div class="row"> 
                                                 <div class="alice-font main_text text-center">
-                                                <p class="animated zoomIn alice-font" style="color:#ce7e00; font-size:4em;">Adib</p> 
+                                                <p class="animated zoomIn alice-font" style="color:#673e2c; font-size:4em;">Adib</p> 
                                                 <p class="animated zoomIn alice-font" style="color:#8f712f; font-size:4em;">&amp;</p> 
-                                                <p class="animated zoomIn alice-font" style="color:#ce7e00; font-size:4em;">Ezzati</p>
+                                                <p class="animated zoomIn alice-font" style="color:#673e2c; font-size:4em;">Ezzati</p>
                                                 </div> 
                                             </div>
                                             <div class="row text-center pt-4"> 
@@ -100,7 +100,7 @@
                             </section>
                         </main>
                     </div>
-                    <nav class="d-flex navbar navbar-dark bg-dark navbar-nav w-100 bottom-fixed nav__menu_card animated fadeInUp navbar-card d-none"  style="width:inherit !important;background-color: #ce7e00 !important;">
+                    <nav class="d-flex navbar navbar-dark bg-dark navbar-nav w-100 bottom-fixed nav__menu_card animated fadeInUp navbar-card d-none"  style="width:inherit !important;background-color: #673e2c !important;">
                         <ul class="row m-auto p-0 w-100 text-center list-unstyled">
                             <li class="col">
                                 <a class="nav-link" data-bs-toggle="modal" data-bs-target="#contactModal">
@@ -153,22 +153,22 @@
                                         </div>
                                         <div class="row"> 
                                             <div class="alice-font main_text text-center">
-                                            <p class="animated zoomIn alice-font" style="color:#ce7e00; font-size:2.5em;">Adib</p> 
+                                            <p class="animated zoomIn alice-font" style="color:#673e2c; font-size:2.5em;">Adib</p> 
                                             <p class="animated zoomIn alice-font" style="color:#8f712f; font-size:2.5em;">&amp;</p> 
-                                            <p class="animated zoomIn alice-font" style="color:#ce7e00; font-size:2.5em;">Ezzati</p>
+                                            <p class="animated zoomIn alice-font" style="color:#673e2c; font-size:2.5em;">Ezzati</p>
                                             </div> 
                                         </div>
                                         <div class="row"> 
-                                            <div class="alice-font animated fadeIn main_text text-center" style="font-size:18px; color:#ce7e00">
+                                            <div class="alice-font animated fadeIn main_text text-center" style="font-size:18px; color:#673e2c">
                                                 AHAD | 10 Disember 2023
                                             </div>
                                         </div> 
                                         <div class="row"> 
-                                            <div class="alice-font animated fadeInUp main_text text-center" style="font-size:16px; color:#ce7e00">
+                                            <div class="alice-font animated fadeInUp main_text text-center" style="font-size:16px; color:#673e2c">
                                                 The Gabion Garden Hall
                                         </div>
                                         <div class="row"> 
-                                            <div class="alice-font animated fadeInUp main_text text-center" style="font-size:16px; color:#ce7e00">
+                                            <div class="alice-font animated fadeInUp main_text text-center" style="font-size:16px; color:#673e2c">
                                                 Taman Danau Kota
                                         </div> -->   
                                     </div>   
@@ -201,7 +201,7 @@
                                         Alhamdulillah dengan penuh kesyukuran diatas limpah kurnia Allah SWT kami
                                     </p>
                                     <div class="info-invitor aos-init aos-animate mt-3" data-aos="fade-up" data-aos-duration="1000">
-                                        <p style="font-size: 18px; color:#ce7e00">
+                                        <p style="font-size: 18px; color:#673e2c">
                                             <b>KELUARGA PENGANTIN LELAKI</b>
                                         </p>
                                         <p class="mb-1" style="font-size:22px;">Norhayani binti Nong</p>                                                    
@@ -216,17 +216,17 @@
                                     </div>
                                     <br>
                                     <div class="info-details aos-init aos-animate mt-3" data-aos="fade-up" data-aos-duration="1000">
-                                        <p class="mt-3 mb-1" style="font-size:18px;"><b style="color: #ce7e00">Tarikh</b></p>
+                                        <p class="mt-3 mb-1" style="font-size:18px;"><b style="color: #673e2c">Tarikh</b></p>
                                         <p style="font-size:18px;">Ahad,
                                             10
                                             Disember
                                             2023</p>
                                         <br>
-                                        <p class="mt-3 mb-1" style="font-size:18px;"><b style="color:#ce7e00">Masa</b></p>
+                                        <p class="mt-3 mb-1" style="font-size:18px;"><b style="color:#673e2c">Masa</b></p>
                                         <p style="font-size:18px;">11:00 Pagi -
                                             4:00 Petang</p>
                                         <br>
-                                        <p class="mt-3 mb-1" style="font-size:18px;"><b style="color: #ce7e00">Tempat</b></p>
+                                        <p class="mt-3 mb-1" style="font-size:18px;"><b style="color: #673e2c">Tempat</b></p>
                                         <p style="font-size:18px;">
                                             The Gabion Garden Hall
                                         </p>
@@ -238,7 +238,7 @@
                                         </p>
                                     </div>
                                     <div class="info-schedule aos-init aos-animate mt-5" data-aos="fade-up" data-aos-duration="1000">
-                                        <p class="mt-3 mb-1" style="font-size:18px;"><b style="color: #ce7e00">Aturcara Majlis</b></p>
+                                        <p class="mt-3 mb-1" style="font-size:18px;"><b style="color: #673e2c">Aturcara Majlis</b></p>
                                         <table class="table table-borderles" >
                                             <tbody class="tbody-atucara-majlis" style="font-size:18px;">
                                               <tr>
@@ -264,7 +264,7 @@
                             <img src="img/marriednow-project/divider.png" alt="" class="pl-5 pr-5 pt-5">
                             <div class="d-flex justify-content-center align-items-center">
                                 <div class="wrapper w-full text-center">
-                                    <h3 class="alice-font section-title" style="color:#ce7e00">Menghitung Hari</h3>
+                                    <h3 class="alice-font section-title" style="color:#673e2c">Menghitung Hari</h3>
                                     <div id="flipdown" class="flipdown flex justify-center m-auto"></div>
                                 </div>
                             </div>
