--- a/index.html
+++ b/index.html
@@ -78,15 +78,15 @@
                                             <div class="row"> 
                                                 <div class="col">
                                                     <div class="rouge-script-font main_text  text-center" style="font-size:4em; color:#8F712F">
-                                                        Raikan Cinta
+                                                        Walimatulurus
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="row"> 
                                                 <div class="alice-font main_text text-center">
-                                                <p class="animated zoomIn alice-font" style="color:#673e2c; font-size:4em;">Adib</p> 
+                                                <p class="animated zoomIn alice-font" style="color:#caa277; font-size:4em;">Adib</p> 
                                                 <p class="animated zoomIn alice-font" style="color:#8f712f; font-size:4em;">&amp;</p> 
-                                                <p class="animated zoomIn alice-font" style="color:#673e2c; font-size:4em;">Ezzati</p>
+                                                <p class="animated zoomIn alice-font" style="color:#caa277; font-size:4em;">Ezzati</p>
                                                 </div> 
                                             </div>
                                             <div class="row text-center pt-4"> 
