--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                         <div class="container d-flex flex-column aligns-items-center justify-content-center main-opening">
                                             <div class="row"> 
                                                 <div class="col">
-                                                    <div class="rouge-script-font main_text  text-center" style="font-size:4em; color:#8F712F">
+                                                    <div class="rouge-script-font main_text  text-center" style="font-size:4em; color:#d2b995">
                                                         Walimatulurus
                                                     </div>
                                                 </div>
@@ -85,7 +85,7 @@
                                             <div class="row"> 
                                                 <div class="alice-font main_text text-center">
                                                 <p class="animated zoomIn alice-font" style="color:#caa277; font-size:4em;">Adib</p> 
-                                                <p class="animated zoomIn alice-font" style="color:#8f712f; font-size:4em;">&amp;</p> 
+                                                <p class="animated zoomIn alice-font" style="color:#d2b995; font-size:4em;">&amp;</p> 
                                                 <p class="animated zoomIn alice-font" style="color:#caa277; font-size:4em;">Ezzati</p>
                                                 </div> 
                                             </div>
@@ -146,7 +146,7 @@
                                     <div class="container d-flex flex-column aligns-items-center justify-content-center">
                                         <!-- <div class="row"> 
                                             <div class="col">
-                                                <div class="rouge-script-font main_text  text-center" style="font-size:2.5em; color:#8F712F">
+                                                <div class="rouge-script-font main_text  text-center" style="font-size:2.5em; color:#d2b995">
                                                     Raikan Cinta
                                                 </div>
                                             </div>
@@ -154,7 +154,7 @@
                                         <div class="row"> 
                                             <div class="alice-font main_text text-center">
                                             <p class="animated zoomIn alice-font" style="color:#673e2c; font-size:2.5em;">Adib</p> 
-                                            <p class="animated zoomIn alice-font" style="color:#8f712f; font-size:2.5em;">&amp;</p> 
+                                            <p class="animated zoomIn alice-font" style="color:#d2b995; font-size:2.5em;">&amp;</p> 
                                             <p class="animated zoomIn alice-font" style="color:#673e2c; font-size:2.5em;">Ezzati</p>
                                             </div> 
                                         </div>
@@ -305,7 +305,7 @@
                         <footer class="alice-font" style="margin-bottom:10%;">
                             <ul class="pb-20">
                                 <li class="pb-10">
-                                    <!-- <p class="hashtag text-center oleo-script-font" style="font-size: 22px; color:#8f712f">#bismillah</p>  -->
+                                    <!-- <p class="hashtag text-center oleo-script-font" style="font-size: 22px; color:#d2b995">#bismillah</p>  -->
                                 </li>                                
                             </ul>    
                         </footer>      
