--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
                 <div id="template" class="col-lg-4 p-0 shadow-lg">
                     <div class="start aos-init aos-animate" data-aos="fade-in" data-aos-duration="1000">
                         <main>                                  
-                            <section class="container py-5 section__height main-card opening-card" style="background-image: url('img/Adib-Ezzati-bg.png')">
+                            <!-- <section class="container py-5 section__height main-card opening-card" style="background-image: url('img/Adib-Ezzati-bg.png')"> -->
+                            <section class="container py-5 section__height main-card opening-card" style="background-image: url('img/Adib-Ezzati-intro-text.png')">    
                                 <div class="start-overlay">
                                     <div class="align-items-center animated fadeInDow">
                                         <div class="container d-flex flex-column aligns-items-center justify-content-center main-opening">
