--- a/index.html
+++ b/index.html
@@ -508,8 +508,8 @@
                             <div class="modal-body">
                                 <!-- old form -->
                                 <!-- <script type="text/javascript" src="https://form.jotform.com/jsform/232981663038462"></script>  -->                                
-                                <script type="text/javascript" src="https://form.jotform.com/jsform/233032682323448"></script>
-                                <!-- <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfx1Hgkuzegk9nWTpsETntgwhhYeFrUF3rIQqXGPWGB5uPM5A/viewform?embedded=true" width="640" height="1116" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>  -->
+                                <!-- <script type="text/javascript" src="https://form.jotform.com/jsform/233032682323448"></script> -->
+                                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfx1Hgkuzegk9nWTpsETntgwhhYeFrUF3rIQqXGPWGB5uPM5A/viewform?embedded=true" width="640" height="1116" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                             </div>
                         </div>
                     </div>
