--- a/index.html
+++ b/index.html
@@ -292,7 +292,8 @@
                                     Ya Allah, berkatilah satukanlah hati kedua pasangan mempelai ini dengan iman, keyakinan dan tawakal kepadaMu, panjangkan umur mereka, lapangkanlah rezeki mereka, dekatlah mereka menuju kebaikan, jauhkanlah mereka dari keburukan, kurniakanlah mereka zuriat yang soleh dan solehah.
                                 </p>
                             </div>
-                            <img class="img-custom" src="img/marriednow-project/bg-prayer-2.png" alt="">
+                            <!-- <img class="img-custom" src="img/marriednow-project/bg-prayer-2.png" alt=""> -->
+                            <img class="img-custom" src="img/Adib-Ezzati-doa-backgound.png" alt="">                            
                         </section>
                         <section class="container section prayer aos-init aos-animate mb-4" data-aos="fade-up" data-aos-duration="1000">            
                             <div class="wrapper absolute mt-3" style="width: 85%">
