--- a/index.html
+++ b/index.html
@@ -303,7 +303,8 @@
                                 <p class="prayer-text" style="font-style:italic; font-size: 15px;">
                                     Terima kasih.
                                 </p>
-                            </div>                            
+                            </div>
+                             <img class="img-custom" src="img/Adib-Ezzati-doa-backgound.png" alt="">
                         </section>    
                         <footer class="alice-font" style="margin-bottom:10%;">
                             <ul class="pb-20">
