--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                         <section class="container section prayer aos-init aos-animate mb-4" data-aos="fade-up" data-aos-duration="1000">
                             <div class="wrapper absolute mt-3" style="width: 85%">
                                 <p class="prayer-text" style="font-style:italic; font-size: 15px;">
-                                    Ya Allah, berkatilah satukanlah hati kedua pasangan mempelai ini dengan iman, keyakinan dan tawakal kepadaMu, panjangkan umur mereka, lapangkanlah rezeki mereka, dekatlah mereka menuju kebaikan, jauhkanlah mereka dari keburukan, kurniakanlah mereka zuriat yang soleh dan solehah.
+                                    Ya Allah, berkatilah majlis perkahwinan ini. Limpahkan rahmat ke atas pasangan ini. Himpunkan diantara keduanya persefahaman, kemesraan dan hidup keduanya sentiasa merasa kecukupann. Kurniakan mereka keturunan yang soleh & solehah. Sempurnakanlah agama mereka dengan ikatan ini. Semoga ianya berkekalan hingga akhir hayat.
                                 </p>
                             </div>
                             <!-- <img class="img-custom" src="img/marriednow-project/bg-prayer-2.png" alt=""> -->
