--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                         <section class="container section prayer aos-init aos-animate mb-4" data-aos="fade-up" data-aos-duration="1000">
                             <div class="wrapper absolute mt-3" style="width: 85%">
                                 <p class="prayer-text" style="font-style:italic; font-size: 15px;">
-                                    Ya Allah, berkatilah majlis perkahwinan ini. Limpahkan rahmat ke atas pasangan ini. Himpunkan diantara keduanya persefahaman, kemesraan dan hidup keduanya sentiasa merasa kecukupann. Kurniakan mereka keturunan yang soleh & solehah. Sempurnakanlah agama mereka dengan ikatan ini. Semoga ianya berkekalan hingga akhir hayat.
+                                    Ya Allah, berkatilah majlis perkahwinan ini. Himpunkan diantara keduanya persefahaman, kemesraan dan hidup keduanya sentiasa merasa kecukupann. Kurniakan mereka keturunan yang soleh & solehah. Semoga ianya berkekalan hingga akhir hayat.
                                 </p>
                             </div>
                             <!-- <img class="img-custom" src="img/marriednow-project/bg-prayer-2.png" alt=""> -->
