--- a/index.html
+++ b/index.html
@@ -394,7 +394,8 @@
                                                 </a>  
                                             </li>
                                             <li class="list-group-item location-icon" style="border-top: transparent;width: 160px;";> 
-                                                <a target="_blank" class="float-end" href="https://waze.com/ul/hw282gwxn9">
+                                                <!-- <a target="_blank" class="float-end" href="https://waze.com/ul/hw282gwxn9"> -->
+                                                <a target="_blank" class="float-end" href="https://www.waze.com/en/live-map/directions/the-gabion-garden-hall-jalan-323a-25-kuala-lumpur?place=w.66650144.666632512.27381893">                                                       
                                                     <i class="fab fa-waze fa-lg"></i>
                                                     <span> WAZE</span>
                                                 </a> 
