--- a/index.html
+++ b/index.html
@@ -291,11 +291,18 @@
                                 <p class="prayer-text" style="font-style:italic; font-size: 15px;">
                                     Ya Allah, berkatilah majlis perkahwinan ini. Himpunkan diantara keduanya persefahaman, kemesraan dan hidup keduanya sentiasa merasa kecukupan. Kurniakan mereka keturunan yang soleh & solehah. Semoga ianya berkekalan hingga akhir hayat.
                                 </p>
+                                <p class="prayer-text" style="font-style:italic; font-size: 15px;">
+                                    Semoga dengan kehadiran dan doa restu hadirin akan menyerikan lagi majlis kami dan diberkati oleh Allah SWT.
+                                </p>
+                                <p class="prayer-text" style="font-style:italic; font-size: 15px;">
+                                    Terima kasih.
+                                </p>
                             </div>
-                            <!-- <img class="img-custom" src="img/marriednow-project/bg-prayer-2.png" alt=""> -->
-                            <img class="img-custom" src="img/Adib-Ezzati-doa-backgound.png" alt="">                            
+                            <!-- <img class="img-custom" src="img/marriednow-project/bg-prayer-2.png" alt=""> -->                            
+                            <!-- <img class="img-custom" src="img/Adib-Ezzati-doa-backgound.png" alt=""> --> 
+                            <img class="img-custom" src="img/background-doa-long.png" alt="">
                         </section>
-                        <section class="container section prayer aos-init aos-animate mb-4" data-aos="fade-up" data-aos-duration="1000">            
+                        <!-- <section class="container section prayer aos-init aos-animate mb-4" data-aos="fade-up" data-aos-duration="1000">            
                             <div class="wrapper absolute mt-3" style="width: 85%">
                                 <p class="prayer-text" style="font-style:italic; font-size: 15px;">
                                     Semoga dengan kehadiran dan doa restu hadirin akan menyerikan lagi majlis kami dan diberkati oleh Allah SWT.
@@ -305,7 +312,7 @@
                                 </p>
                             </div>
                              <img class="img-custom" src="img/Adib-Ezzati-doa-backgound.png" alt="">
-                        </section>    
+                        </section>  -->    
                         <footer class="alice-font" style="margin-bottom:10%;">
                             <ul class="pb-20">
                                 <li class="pb-10">
