--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                         </script>
                         <!--=============== PRAYER ===============-->
                         <section class="container section prayer aos-init aos-animate mb-4" data-aos="fade-up" data-aos-duration="1000">
-                            <!-- <div class="wrapper absolute mt-3" style="width: 85%"> -->
+                            <div class="wrapper absolute mt-3" style="width: 85%">
                                 <p class="prayer-text" style="font-style:italic; font-size: 15px;">
                                     Ya Allah, berkatilah majlis perkahwinan ini. Himpunkan diantara keduanya persefahaman, kemesraan dan hidup keduanya sentiasa merasa kecukupan. Kurniakan mereka keturunan yang soleh & solehah. Semoga ianya berkekalan hingga akhir hayat.
                                 </p>
@@ -297,7 +297,7 @@
                                 <p class="prayer-text" style="font-style:italic; font-size: 15px;">
                                     Terima kasih.
                                 </p>
-                            <!-- </div> -->
+                            </div>
                             <!-- <img class="img-custom" src="img/marriednow-project/bg-prayer-2.png" alt=""> -->                            
                             <!-- <img class="img-custom" src="img/Adib-Ezzati-doa-backgound.png" alt=""> --> 
                             <img class="img-custom" src="img/background-doa-long.png" alt="">
