--- a/index.html
+++ b/index.html
@@ -289,8 +289,9 @@
                         <section class="container section prayer aos-init aos-animate mb-4" data-aos="fade-up" data-aos-duration="1000">
                             <div class="wrapper absolute mt-3" style="width: 85%; height: 70%;">
                                 <p class="prayer-text" style="font-style:italic; font-size: 15px;">
-                                    Ya Allah, berkatilah majlis perkahwinan ini. Himpunkan diantara keduanya persefahaman, kemesraan dan hidup keduanya sentiasa merasa kecukupan. Kurniakan mereka keturunan yang soleh & solehah. Semoga ianya berkekalan hingga akhir hayat.
+                                    Ya Allah, berkatilah majlis perkahwinan ini. Himpunkan diantara keduanya persefahaman, kemesraan dan hidup keduanya sentiasa merasa kecukupan. Kurniakan mereka keturunan yang soleh & solehah, serta berikanlah ketenangan kepada mereka di dunia dan akhirat. Sempurnakanlah agama mereka dengan ikatan ini. Semoga ianya berkekalan hingga akhir hayat.
                                 </p>
+                                <br>
                                 <p class="prayer-text" style="font-style:italic; font-size: 15px;">
                                     Semoga dengan kehadiran dan doa restu hadirin akan menyerikan lagi majlis kami dan diberkati oleh Allah SWT.
                                 </p>
