remove margin bottom

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                         <section class="container section prayer aos-init aos-animate mb-4" data-aos="fade-up" data-aos-duration="1000">
                             <div class="wrapper absolute mt-3" style="width: 85%; height: 75%;">
                                 <p class="prayer-text" style="font-style:italic; font-size: 15px;">
-                                    Ya Allah, berkatilah majlis perkahwinan ini. Himpunkan diantara keduanya persefahaman, kemesraan dan hidup keduanya sentiasa merasa kecukupan. Kurniakan mereka keturunan yang soleh & solehah, serta berikanlah ketenangan kepada mereka di dunia dan akhirat. Sempurnakanlah agama mereka dengan ikatan ini. Semoga ianya berkekalan hingga akhir hayat.
+                                    Ya Allah, berkatilah majlis perkahwinan ini. Himpunkan diantara keduanya persefahaman, kemesraan dan hidup keduanya sentiasa merasa kecukupan. Kurniakan mereka keturunan yang soleh & solehah, serta berikanlah ketenangan kepada mereka di dunia dan akhirat. Semoga ianya berkekalan hingga akhir hayat.
                                 </p>
                                 <br>
                                 <p class="prayer-text" style="font-style:italic; font-size: 15px;">
@@ -313,8 +313,9 @@
                                 </p>
                             </div>
                              <img class="img-custom" src="img/Adib-Ezzati-doa-backgound.png" alt="">
-                        </section>  -->    
-                        <footer class="alice-font" style="margin-bottom:10%;">
+                        </section>  -->
+                        <!-- <footer class="alice-font" style="margin-bottom:10%;"> -->
+                        <footer class="alice-font">
                             <ul class="pb-20">
                                 <li class="pb-10">
                                     <!-- <p class="hashtag text-center oleo-script-font" style="font-size: 22px; color:#d2b995">#bismillah</p>  -->
